// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`should generate the app script for a page that has metadata 1`] = `
"import { createDevtools, createStore, mount } from "@inglorious/web"
import { router } from "@inglorious/web/router"

const pages = [{"path":"/posts","modulePath":"posts.js"}]
const path = window.location.pathname + window.location.search + window.location.hash
const page = pages.find((page) => page.path === path)

const types = { router }

const entities = {
  router: {
    type: "router",
    routes: {
      "/posts": () => import("@/pages/posts.js")
    },
  },

  "about": {
    "type": "about",
    "name": "Us",
    "id": "about"
  },
  "posts": {
    "type": "posts",
    "name": "Antony",
    "posts": [],
    "id": "posts"
  }

}

const middlewares = []
if (import.meta.env.DEV) {
  middlewares.push(createDevtools().middleware)
}

const module = await entities.router.routes[page.path]()

types.router.path = page.path
types.router.route = page.moduleName

const type = module[page.moduleName]
types[page.moduleName] = type
entities.router.routes[page.path] = page.moduleName

const store = createStore({ types, entities, middlewares })

const root = document.getElementById("root")

mount(store, (api) => {
  const { route } = api.getEntity("router")
  return api.render(route, { allowType: true })
}, root)
"
`;

exports[`should generate the app script for a page with an entity 1`] = `
"import { createDevtools, createStore, mount } from "@inglorious/web"
import { router } from "@inglorious/web/router"

const pages = [{"path":"/about","modulePath":"about.js"}]
const path = window.location.pathname + window.location.search + window.location.hash
const page = pages.find((page) => page.path === path)

const types = { router }

const entities = {
  router: {
    type: "router",
    routes: {
      "/about": () => import("@/pages/about.js")
    },
  },

  "about": {
    "type": "about",
    "name": "Us",
    "id": "about"
  },
  "posts": {
    "type": "posts",
    "name": "Antony",
    "posts": [],
    "id": "posts"
  }

}

const middlewares = []
if (import.meta.env.DEV) {
  middlewares.push(createDevtools().middleware)
}

const module = await entities.router.routes[page.path]()

types.router.path = page.path
types.router.route = page.moduleName

const type = module[page.moduleName]
types[page.moduleName] = type
entities.router.routes[page.path] = page.moduleName

const store = createStore({ types, entities, middlewares })

const root = document.getElementById("root")

mount(store, (api) => {
  const { route } = api.getEntity("router")
  return api.render(route, { allowType: true })
}, root)
"
`;

exports[`should generate the app script for a static page 1`] = `
"import { createDevtools, createStore, mount } from "@inglorious/web"
import { router } from "@inglorious/web/router"

const pages = [{"path":"/","modulePath":"index.js"}]
const path = window.location.pathname + window.location.search + window.location.hash
const page = pages.find((page) => page.path === path)

const types = { router }

const entities = {
  router: {
    type: "router",
    routes: {
      "/": () => import("@/pages/index.js")
    },
  },

  "about": {
    "type": "about",
    "name": "Us",
    "id": "about"
  },
  "posts": {
    "type": "posts",
    "name": "Antony",
    "posts": [],
    "id": "posts"
  }

}

const middlewares = []
if (import.meta.env.DEV) {
  middlewares.push(createDevtools().middleware)
}

const module = await entities.router.routes[page.path]()

types.router.path = page.path
types.router.route = page.moduleName

const type = module[page.moduleName]
types[page.moduleName] = type
entities.router.routes[page.path] = page.moduleName

const store = createStore({ types, entities, middlewares })

const root = document.getElementById("root")

mount(store, (api) => {
  const { route } = api.getEntity("router")
  return api.render(route, { allowType: true })
}, root)
"
`;
